force-app/main/default/objects/Campaign/fields/DataCloud_Segment_Id__c.field-meta.xml
<CustomField>
  <fullName>DataCloud_Segment_Id__c</fullName>
  <description>Selected Data Cloud Segment Id</description>
  <label>Data Cloud Segment Id</label>
  <length>80</length>
  <type>Text</type>
</CustomField>