force-app/main/default/objects/Campaign/fields/DataCloud_Segment_Name__c.field-meta.xml
<CustomField>
  <fullName>DataCloud_Segment_Name__c</fullName>
  <description>Selected Data Cloud Segment Name</description>
  <label>Data Cloud Segment Name</label>
  <length>255</length>
  <type>Text</type>
</CustomField>