force-app/main/default/objects/Campaign/fields/Products__c.field-meta.xml
<CustomField>
  <fullName>Products__c</fullName>
  <description>Semicolon delimited list of product IDs selected by LWC</description>
  <label>Products</label>
  <length>32768</length>
  <type>LongTextArea</type>
</CustomField>